fix: traefik host url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       - PORT=3000
     labels:
      - traefik.enable=true
-     - traefik.http.routers.apache.rule=Host(`app.example.com`)
+     - traefik.http.routers.apache.rule=Host(`app.mitschl.de`)
      - traefik.http.routers.apache.entrypoints=web
