--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,30 @@ services:
     image: "ghcr.io/mitschlcoding/next-drizz:latest"
     container_name: nextjs_production_app
     ports:
-      - "80:80"
+      - "3000:3000"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - PORT=80
-    labels:
-     - traefik.enable=true
-     - traefik.http.routers.apache.rule=Host(`app.mitschl.de`)
-     - traefik.http.routers.apache.entrypoints=web
+      - PORT=3000
     networks:
       - "proxy"
+    labels:
+      - "traefik.enable=true"
+      # --- HTTP ROUTER for redirection ---
+      - "traefik.http.routers.app-http.entrypoints=http"
+      - "traefik.http.routers.app-http.rule=Host(`app.mitschl.de`)"
+      - "traefik.http.routers.app-http.middlewares=app-https-redirect"
+      - "traefik.http.middlewares.app-https-redirect.redirectscheme.scheme=https"
+      
+      # --- HTTPS ROUTER for the actual service ---
+      - "traefik.http.routers.app-secure.entrypoints=https"
+      - "traefik.http.routers.app-secure.rule=Host(`app.mitschl.de`)"
+      - "traefik.http.routers.app-secure.tls=true"
+      - "traefik.http.routers.app-secure.tls.certresolver=http"
+      
+      # --- Point Traefik to the right port and service ---
+      - "traefik.http.services.app-service.loadbalancer.server.port=3000"
+      - "traefik.http.routers.app-secure.service=app-service"
 
 networks:
   proxy:
